feat: add hover effects to cards

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -12,7 +12,7 @@ const { project } = Astro.props
 ---
 
 <div
-  class="overflow-hidden rounded-xl border transition-colors duration-300 ease-in-out hover:bg-secondary/50"
+  class="hover-card overflow-hidden rounded-xl border"
 >
   <Link href={project.data.link} class="block" external>
     <Image
