--- a/src/components/mdx/GoodreadsGrid.astro
+++ b/src/components/mdx/GoodreadsGrid.astro
@@ -132,7 +132,7 @@ function formatDate(dateString: any) {
             class="h-36 w-24"
             target="_blank"
           >
-            <div class="relative h-full w-full">
+            <div class="hover-card relative h-full w-full">
               <div
                 class="placeholder rounded-lg bg-gray-300 dark:bg-gray-800"
                 id={`placeholder-${book.data.book_id}`}
