--- a/src/components/mdx/TraktGrid.astro
+++ b/src/components/mdx/TraktGrid.astro
@@ -115,7 +115,7 @@ function formatDate(dateString: any) {
         <div class="flex flex-col items-center">
           <a
             href={`https://www.imdb.com/title/${item.data.imdb}`}
-            class="h-36 w-24"
+            class="hover-card h-36 w-24"
             target="_blank"
           >
             <div class="relative h-full w-full">
