--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -25,7 +25,7 @@ const readTime = readingTime(entry.body);
 ---
 
 <div
-  class="not-prose rounded-xl border p-4 transition-colors duration-300 ease-in-out hover:bg-secondary/50"
+  class="hover-card not-prose rounded-xl border p-3"
 >
   <Link
     href={`/${entry.collection}/${entry.slug}`}
