--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -11,8 +11,8 @@ const { prevPost, nextPost } = Astro.props
   <Link
     href={prevPost ? `/posts/${prevPost.slug}` : '#'}
     class={cn(
-      buttonVariants({ variant: 'outline' }),
-      'rounded-xl group flex items-center justify-start w-full sm:w-1/2 h-fit',
+      buttonVariants({ variant: 'outline_no_hover' }),
+      'hover-card rounded-xl group flex items-center justify-start w-full sm:w-1/2 h-fit',
       !prevPost && 'pointer-events-none opacity-50 cursor-not-allowed',
     )}
     aria-disabled={!prevPost}
@@ -33,8 +33,8 @@ const { prevPost, nextPost } = Astro.props
   <Link
     href={nextPost ? `/posts/${nextPost.slug}` : '#'}
     class={cn(
-      buttonVariants({ variant: 'outline' }),
-      'rounded-xl group flex items-center justify-end w-full sm:w-1/2 h-fit',
+      buttonVariants({ variant: 'outline_no_hover' }),
+      'hover-card rounded-xl group flex items-center justify-end w-full sm:w-1/2 h-fit',
       !nextPost && 'pointer-events-none opacity-50 cursor-not-allowed',
     )}
     aria-disabled={!nextPost}
