--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,6 +87,7 @@
   .disable-transitions * {
     @apply !transition-none;
   }
+
 }
 
 @layer components {
@@ -328,4 +329,58 @@ html.dark .swup-progress-bar {
 
 .no-select {
   user-select: none;
+}
+
+@layer utilities {
+  .duration-600 {
+    transition-duration: 200ms;
+  }
+}
+
+.hover-card {
+  @apply no-underline transition-all duration-600 ease-in-out rounded-lg;
+}
+
+.hover-card:hover {
+  @apply z-10 bg-gradient-to-r from-white to-border border border-gray-100 shadow-md transform -skew-x-1 -rotate-1 -translate-y-2;
+  box-shadow: 2px 2px 1px 1px #e9e9e9, 2px 3px 1px 1px #e8e8e8, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+}
+
+.hover-card:active {
+  @apply bg-gray-200 border border-gray-400 transition-all duration-100 ease-in;
+}
+
+.hover-card.highlight {
+  @apply bg-yellow-100 border border-transparent;
+}
+
+.hover-card.highlight:hover {
+  @apply bg-gradient-to-r from-yellow-100 to-transparent border border-yellow-300 shadow-md;
+  box-shadow: 2px 2px 1px 1px #fff394, 2px 3px 1px 1px #ffe770, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+}
+
+.hover-card.highlight:active {
+  @apply bg-yellow-100 border border-yellow-300;
+}
+
+.dark .hover-card:hover {
+  @apply bg-gradient-to-r from-gray-900/80 to-border border border-gray-700;
+  box-shadow: 3px 3px 2px 2px #313131, 2px 3px 1px 1px #3a3a3a, 9px 14px 18px rgba(255, 255, 255, 0.06) !important;
+}
+
+.dark .hover-card:active {
+  @apply bg-gray-800 border border-gray-600  transition-all duration-100 ease-in;
+}
+
+.dark .hover-card.highlight {
+  @apply bg-yellow-900 border border-transparent;
+}
+
+.dark .hover-card.highlight:hover {
+  @apply bg-gradient-to-r from-yellow-900 to-transparent border border-yellow-700;
+  box-shadow: 2px 2px 1px 1px #7a6f00, 2px 3px 1px 1px #8a7f00, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+}
+
+.dark .hover-card.highlight:active {
+  @apply bg-yellow-900 border border-yellow-700;
 }
