--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -342,8 +342,8 @@ html.dark .swup-progress-bar {
 }
 
 .hover-card:hover {
-  @apply z-10 bg-gradient-to-r from-white to-border border border-gray-100 shadow-md transform -skew-x-1 -rotate-1 -translate-y-2;
-  box-shadow: 2px 2px 1px 1px #e9e9e9, 2px 3px 1px 1px #e8e8e8, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+  @apply z-10 bg-gradient-to-r from-white to-border border border-gray-100 shadow-md transform -translate-y-2;
+  box-shadow: 0px 2px 1px #e9e9e9, 0px 3px 1px #e8e8e8, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
 }
 
 .hover-card:active {
@@ -356,7 +356,7 @@ html.dark .swup-progress-bar {
 
 .hover-card.highlight:hover {
   @apply bg-gradient-to-r from-yellow-100 to-transparent border border-yellow-300 shadow-md;
-  box-shadow: 2px 2px 1px 1px #fff394, 2px 3px 1px 1px #ffe770, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+  box-shadow: 0px 2px 1px 1px #fff394, 0px 3px 1px 1px #ffe770, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
 }
 
 .hover-card.highlight:active {
@@ -365,7 +365,7 @@ html.dark .swup-progress-bar {
 
 .dark .hover-card:hover {
   @apply bg-gradient-to-r from-gray-900/80 to-border border border-gray-700;
-  box-shadow: 3px 3px 2px 2px #313131, 2px 3px 1px 1px #3a3a3a, 9px 14px 18px rgba(255, 255, 255, 0.06) !important;
+  box-shadow: 0px 3px 2px #313131, 0px 3px 1px #3a3a3a, 9px 14px 18px rgba(255, 255, 255, 0.08) !important;
 }
 
 .dark .hover-card:active {
@@ -378,7 +378,7 @@ html.dark .swup-progress-bar {
 
 .dark .hover-card.highlight:hover {
   @apply bg-gradient-to-r from-yellow-900 to-transparent border border-yellow-700;
-  box-shadow: 2px 2px 1px 1px #7a6f00, 2px 3px 1px 1px #8a7f00, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+  box-shadow: 0px 2px 1px 1px #7a6f00, 0px 3px 1px 1px #8a7f00, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
 }
 
 .dark .hover-card.highlight:active {
