style: reduce y translate for hover-card

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -150,7 +150,7 @@ const prevPost = getPrevPost(currentPostSlug);
               post.data.tags.map((tag) => (
                 <a
                   href={`/tags/${tag}`}
-                  class={badgeVariants({ variant: 'secondary' })}
+                  class={`hover-card ${badgeVariants({ variant: 'secondary' })}`}
                 >
                   <Icon name="lucide:hash" class="size-3 -translate-x-0.5" />
                   {tag}
