--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -341,9 +341,27 @@ html.dark .swup-progress-bar {
   @apply no-underline transition-all duration-600 ease-in-out rounded-lg;
 }
 
+/* Define CSS variables for box-shadow values */
+:root {
+  --box-shadow-small: 0px 0.1px 0.1px #e9e9e9, 0px 0.1px 0.1px #e8e8e8, 0.1px 0px 0px rgba(0, 0, 0, 0.06);
+  --box-shadow-large: 0px 2px 1px #e9e9e9, 0px 3px 1px #e8e8e8, 9px 14px 18px rgba(0, 0, 0, 0.06);
+  --translate-y-small: -1px;
+  --translate-y-large: -3px;
+}
+
+/* Apply the box-shadow and transform based on the container size */
 .hover-card:hover {
-  @apply z-10 bg-gradient-to-r from-white to-border border border-gray-100 shadow-md transform -translate-y-2;
-  box-shadow: 0px 2px 1px #e9e9e9, 0px 3px 1px #e8e8e8, 9px 14px 18px rgba(0, 0, 0, 0.06) !important;
+  @apply z-10 bg-gradient-to-r from-white to-border border border-gray-100 shadow-md;
+  box-shadow: var(--box-shadow-large);
+  transform: translateY(var(--translate-y-large));
+}
+
+/* Adjust box-shadow and transform for smaller containers */
+@media (max-width: 1px) {
+  .hover-card:hover {
+    box-shadow: var(--box-shadow-small);
+    transform: translateY(var(--translate-y-small));
+  }
 }
 
 .hover-card:active {
