--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ const getAuthorsForPost = (post: CollectionEntry<'posts'>): Author[] => {
       <h2 class="text-2xl font-bold">Latest posts</h2>
       <ul class="not-prose flex flex-col gap-y-4">
         {posts.map((post) => (
-          <li>
+          <li class="translate-y-2/4 intersect:translate-y-0 transition ease-in-out duration-1000 opacity-0 intersect:opacity-100 intersect-once">
             <BlogCard entry={post} authors={getAuthorsForPost(post)} />
           </li>
         ))}
