style: increase header blur and show fewer posts on home page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import logo from '../../public/static/logo.png'
 ---
 
 <header
-  class="sticky top-0 z-10 bg-background/50 backdrop-blur-md"
+  class="sticky top-0 z-50 bg-background/50 backdrop-blur-lg"
   transition:persist
 >
   <Container>
@@ -30,7 +30,7 @@ import logo from '../../public/static/logo.png'
             NAV_LINKS.map((item) => (
               <Link
                 href={item.href}
-                class="capitalize text-foreground/60 transition-colors hover:text-foreground/80"
+                class="capitalize text text-foreground/70 transition-colors hover:text-foreground"
               >
                 {item.label}
               </Link>
