--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -53,7 +53,7 @@ const { title, description, image = '/static/twitter-card.png' } = Astro.props
 
 <HoverPrefetch max={8} />
 
-<script defer src="https://unpkg.com/tailwindcss-intersect@2.x.x/dist/observer.min.js"></script>
+<script defer src="https://unpkg.com/tailwindcss-intersect@2.x.x/dist/observer.min.js" is:inline></script>
 
 <script is:inline>
   function setDarkMode(document) {
