--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -108,6 +108,9 @@ const prevPost = getPrevPost(currentPostSlug);
         <h1 class="text-5xl font-black leading-none sm:text-6xl sm:leading-[0.9] -mx-8">
           {post.data.title}
         </h1>
+        <span class="text-primary bg-border opacity-75 rounded-full font-light leading-5 mx-14 px-4 py-2">
+          {post.data.description}
+        </span>
 
         <div
           class="flex flex-wrap items-center justify-center gap-2 text-sm text-muted-foreground"
