build: optimize media

--- a/src/pages/about/[...slug].astro
+++ b/src/pages/about/[...slug].astro
@@ -43,7 +43,7 @@ const getAuthorsForPost = (post: CollectionEntry<'posts'>) => {
       slug: authorSlug,
       name: authorSlug,
       full_name: authorSlug,
-      avatar: '/static/profile.png',
+      avatar: '/static/profile.jpg',
       isRegistered: false,
     };
   });
