--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -45,7 +45,7 @@ const authorData = authors.map((authorSlug) => {
     slug: authorSlug,
     name: author ? author.data.name : authorSlug,
     full_name: author ? author.data.full_name : authorSlug,
-    avatar: '/static/profile.png',
+    avatar: '/static/profile.jpg',
     isRegistered: !!author,
   };
 });
