--- a/src/pages/tags/[...slug].astro
+++ b/src/pages/tags/[...slug].astro
@@ -54,7 +54,7 @@ const getAuthorsForPost = (post: CollectionEntry<'posts'>): Author[] => {
       slug: authorSlug,
       name: authorSlug,
       full_name: authorSlug,
-      avatar: '/static/profile.png',
+      avatar: '/static/profile.jpg',
       isRegistered: false,
     };
   });
