--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -53,7 +53,7 @@ const getAuthorsForPost = (post: CollectionEntry<'posts'>): Author[] => {
       slug: authorSlug,
       name: authorSlug,
       full_name: authorSlug,
-      avatar: '/static/profile.png',
+      avatar: '/static/profile.jpg',
       isRegistered: false,
     };
   });
