--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const { title, description, image } = Astro.props
   </head>
   <body>
     <div
-      class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
+      class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased mt-24"
     >
       <Header />
       <main class="flex-grow">
