--- a/src/components/mdx/CodeToggle.astro
+++ b/src/components/mdx/CodeToggle.astro
@@ -14,6 +14,8 @@ interface Props {
   className?: string;
   preserveIndent?: boolean;
   showLineNumbers?: boolean;
+  showSourceText?: string;
+  hideSourceText?: string;
 }
 
 const {
@@ -28,6 +30,8 @@ const {
     className,
     preserveIndent,
     showLineNumbers = true,
+    showSourceText = "Show Source",
+    hideSourceText = "Hide Source",
 } = Astro.props;
 
 let validFrame: "code" | "terminal" | "none" | "auto" | undefined;
@@ -53,8 +57,8 @@ if (frame === "code" || frame === "terminal" || frame === "none" || frame === "a
             cursor-pointer transition-all duration-300 w-fit"
       >
         <CodeIcon className="w-3 h-3" />
-        <span class="select-none group-open:hidden">Show Source</span>
-        <span class="select-none hidden group-open:block">Hide Source</span>
+        <span class="select-none group-open:hidden">{showSourceText}</span>
+        <span class="select-none hidden group-open:block">{hideSourceText}</span>
       </summary>
       <div class="mt-3 rounded-md overflow-hidden">
         <Code
