--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,4 @@
 ---
-// filepath: /c:/Users/MSadm/Documents/Sadman/code/SIDEPROJECTS/blogv2/src/components/Header.astro
 import Container from '@/components/Container.astro'
 import Link from '@/components/Link.astro'
 import MobileMenu from '@/components/ui/mobile-menu'
@@ -9,11 +8,11 @@ import { NAV_LINKS, SITE } from '@/consts'
 ---
 
 <header
-  class="fixed top-0 left-0 w-full z-50 bg-background/50 backdrop-blur-lg transition-transform duration-300"
+  class="sticky top-0 left-0 w-full z-50 bg-background/50 backdrop-blur-lg"
   transition:persist
 >
-  <Container class="max-w-full px-8">
-    <div class="flex flex-wrap items-center justify-between gap-4 py-3">
+  <Container class="max-w-full px-5">
+    <div class="flex flex-wrap items-center justify-between gap-4 py-5">
       <Link
         href="/"
         class="flex flex-shrink-0 items-center gap-2 text-xl font-semibold transition-colors duration-300 hover:text-primary"
@@ -45,20 +44,3 @@ import { NAV_LINKS, SITE } from '@/consts'
     </div>
   </Container>
 </header>
-
-<script>
-  let lastScrollTop = 0;
-  const header = document.querySelector('header');
-
-  window.addEventListener('scroll', function() {
-    let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-    if (scrollTop > lastScrollTop){
-      // if (header) header.style.top = '-80px';
-      if (header) header.classList.add('transform', '-translate-y-full');
-    } else {
-      // if (header) header.style.top = '0';
-      if (header) header.classList.remove('transform', '-translate-y-full');
-    }
-    lastScrollTop = scrollTop;
-  });
-</script>
