--- a/src/components/mdx/GoodreadsGrid.astro
+++ b/src/components/mdx/GoodreadsGrid.astro
@@ -63,6 +63,10 @@ if (!filterTitles || filterTitles.length === 0) {
 }
 
 function formatDate(dateString: any) {
+  if (!dateString) return "———";
+  const date = new Date(dateString);
+  if (isNaN(date.getTime())) return "———";
+    
   const monthNames = [
     'Jan',
     'Feb',
@@ -78,7 +82,6 @@ function formatDate(dateString: any) {
     'Dec',
   ]
 
-  const date = new Date(dateString)
   const day = date.getUTCDate()
   const month = monthNames[date.getUTCMonth()]
   const year = date.getUTCFullYear()
@@ -126,13 +129,13 @@ function formatDate(dateString: any) {
   >
     {
       books.map((book: Book) => (
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center group">
           <a
             href={`https://www.goodreads.com/book/show/${book.data.book_id}`}
             class="h-36 w-24"
             target="_blank"
           >
-            <div class="hover-card relative h-full w-full">
+            <div class="relative h-full w-full transform transition-transform duration-300 group-hover:-translate-y-2">
               <div
                 class="placeholder rounded-lg bg-gray-300 dark:bg-gray-800"
                 id={`placeholder-${book.data.book_id}`}
