feat: add astro-loader-goodreads to projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,6 +12,7 @@ const projects = await getCollection('projects');
 // Define the order of project slugs
 const projectOrder = [
   'blog/blog',
+  'astro-loader-goodreads/astro-loader-goodreads',
   'eagerdb/eagerdb',
   'pey-2023-dashboard/pey-2023-dashboard',
   'fricdl/fricdl',
